fixed foldable height with overflow:hidden

--- a/src/components/ui/foldablebox/foldablebox.scss
+++ b/src/components/ui/foldablebox/foldablebox.scss
@@ -14,6 +14,7 @@
   //position: absolute;
   width: 90%;
   padding: 0.4em;
+  overflow: hidden;
   // border: 1px solid lighten(grey, 10%);
   // background: lighten(grey, 20%);
   // color: white;
